apps/private/mongo-express/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-express
  labels:
    kubernetes.io/metadata.name: mongo-express
